--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -1,8 +1,10 @@
 body{
     background: orangered;
     color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     a{
         text-decoration: none;
         text-transform: capitalize;
+        color: white;
     }
 }
